--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,3 +37,11 @@ spring.datasource.hikari.idle-timeout=10000
 # salvando dados automaticamente no Banco de Dados
 spring.datasource.hikari.auto-commit=true
 
+
+# Setting up Application.properties file with configurations required for using Gmail SMTP server.
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gustavopacotest@gmail.com
+spring.mail.password=ddncmnmtfzfqtfnl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
