--- a/old-introducao-crud-springboot-api/.gitignore
+++ b/old-introducao-crud-springboot-api/.gitignore
@@ -9,7 +9,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+../.mvn/wrapper/maven-wrapper.jar
 
 ### VisualStudioCode template
 .vscode/*
