--- a/springboot-full-registration-api/src/main/resources/application-dev.properties
+++ b/springboot-full-registration-api/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode-full-registration
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/DATASOURCE-BD
+spring.datasource.username=BD-USER
+spring.datasource.password=BD-PASSWORD
 
 server.error.include-message=always
 server.port=8080
@@ -41,7 +41,7 @@ spring.datasource.hikari.auto-commit=true
 # Setting up Application.properties file with configurations required for using Gmail SMTP server.
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gustavopacotest@gmail.com
-spring.mail.password=ddncmnmtfzfqtfnl
+spring.mail.username=MAIL
+spring.mail.password=MAIL-PASSWORD
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
